# GCPBucketOps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  server.py
config/: config.py
database/: db.py
gcf_cleanup/: main.py  requirements.txt
migrations/versions/: 5b9c95d33c91_removed_uniqueconstraint.py  7394fd3b630d_file_model.py  f9244536033a_unique_columns.py
src/api/: __init__.py  handlers.py
src/api/v1/: __init__.py
src/api/v1/file/: enums.py  exceptions.py
src/api/v1/file/controllers/: __init__.py  file.py
src/api/v1/file/models/: __init__.py  file.py
src/api/v1/file/schemas/: __init__.py  request.py  response.py
src/api/v1/file/services/: __init__.py  bigquery_logger.py  file.py  firestore_logger.py
src/constants/: __init__.py  messages.py
src/core/: basic_auth.py  exceptions.py  gcs.py  scheduler.py
src/core/utils/: __init__.py  schema.py
