[tool.poetry]
name = "BlogPost"
version = "0.1.0"
description = ""
authors = ["Ruturajsinh Rathod <vazarutaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
alembic = "^1.16.1"
asyncpg = "^0.30.0"
aiohttp = "^3.8.4"
pyjwt = "^2.6.0"
typer = { extras = ["all"], version = "^0.9.0" }
fastapi = "^0.115.12"
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
sqlalchemy = "^2.0.41"
pytz = "^2025.2"
bcrypt = "^4.3.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
cachetools = "^5.3.2"
fastapi-pagination = "^0.13.3"
python-multipart = "^0.0.20"
google-cloud-storage = "^3.2.0"
google-cloud-firestore = "^2.21.0"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]
fix = true
